refactor Get lotti